# p3c

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
examples/: basic_usage.py
p3c/: __init__.py  core.py
tests/: test_core.py
